# BioP

./: .gitignore  Makefile  PROJECT_OVERVIEW.md  PROJECT_PLAN.md  requirements.txt  setup_workspace.sh
configs/: env_config.yaml  model_config.yaml  rl_config.yaml  safety_config.yaml
docs/: dev_copilot_meta_prompt.md
edge_deployment/: Cargo.toml  config_registers.json
edge_deployment/src/: inference_engine.rs  main.rs  opcua_bridge.rs  shadow_mode.rs  watchdog.rs
envs/: bsm1_differentiable.py  bsm1_full_simulation.py  digital_twin_config.json  reward_functions.py  state_observers.py
models/: attention_decay.py  expanded_ncde.py  koopman_operator.py  ncde_solver.py  pinn_loss.py  sindy_library.py
prompt_engineering/: 00_System_Baseline.md  01_Phase1_Data.md  01_Phase1_Task2_Spline_IPW.md  02_Phase2_Twin_Sandbox.md  04_Phase3_Safety_Guardrails.md  05_Phase4_Training_Pipeline.md  07_Milestone_Preflight_Check.md
rl_agents/: cvar_tail_risk.py  hierarchical_actor_critic.py  lexicographic_sac.py  priority_replay.py
safety/: control_barrier_functions.py  full_control_module.py  hji_solver.py  qp_interceptor.py  reachability_tube.py
tests/: README.py  __init__.py
tools/: estimate_params.py
training/: export_onnx.py  integration_dryrun.py  knowledge_distillation.py  train_full_system.py  train_phase1_ncde.py  train_phase2_koopman.py
