[package]
name = "biop_edge_controller"
version = "2.0.0"
edition = "2021"
authors = ["BioP WorldModel Team"]
description = "污水生化除磷工业边缘控制器 - Rust 推理引擎"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
onnxruntime = "0.1"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "biop_edge_controller"
path = "src/main.rs"

[lib]
name = "biop_edge_controller"
path = "src/lib.rs"
